--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.89.0",
     "@walletconnect/ethereum-provider": "^2.21.9",
+    "lucide-react": "^0.546.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
