--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 3030",
-    "build": "next build",
+    "build": "NODE_OPTIONS='--no-deprecation' next build",
     "start": "next start -p 3030",
     "lint": "eslint"
   },
